--- a/settings/project.json
+++ b/settings/project.json
@@ -15,19 +15,17 @@
     "Dynamic Atlas",
     "DragonBones",
     "EditBox",
-    "Geom Utils",
     "Intersection",
     "Label Effect",
-    "Mesh",
     "MotionStreak",
     "NodePool",
     "Native Socket",
     "Physics",
-    "PageView",
     "PageViewIndicator",
     "ProgressBar",
     "ParticleSystem",
     "RichText",
+    "Renderer Texture",
     "Slider",
     "ScrollBar",
     "Spine Skeleton",
@@ -35,7 +33,7 @@
     "Toggle",
     "TiledMap",
     "VideoPlayer",
-    "3D",
+    "Widget",
     "3D Primitive",
     "SubContext",
     "TypeScript Polyfill",
